objects/ACP_Application_Breakdown__c.object
<CustomObject>
    <fields>
        <fullName>ACP_Account_Plan__c</fullName>
        <label>ACP Account Plan</label>
        <referenceTo>ACP_Account_Plan__c</referenceTo>
        <relationshipLabel>Application Breakdowns</relationshipLabel>
        <relationshipName>Application_Breakdowns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ACP_CBC_1__c</fullName>
        <formula>TEXT(Platform_Content__r.CBC_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC_2__c</fullName>
        <formula>TEXT(Platform_Content__r.CBC_2__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CBC_3__c</fullName>
        <formula>TEXT(Platform_Content__r.CBC_3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBC 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_CY_Bill_RR__c</fullName>
        <label>CY Bill (RR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACP_LY_Bill__c</fullName>
        <label>LY Bill</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Main_Competitor_Share__c</fullName>
        <formula>Platform_Content__r.Main_Competitor_Share__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Competitor Share %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ACP_Main_Competitor__c</fullName>
        <formula>Platform_Content__r.Main_Competitor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Competitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_NY_Fcst__c</fullName>
        <label>NY Fcst</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Opportunity_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Application Breakdowns</relationshipLabel>
        <relationshipName>Application_Breakdowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACP_PAM__c</fullName>
        <formula>Platform_Content__r.PAM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Platform_Content_Name__c</fullName>
        <formula>Platform_Content__r.ACP_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Platform Content Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACP_SAM__c</fullName>
        <formula>Platform_Content__r.SAM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TAM_CY__c</fullName>
        <description>Hari 7/Aug/17 Created for Account Plan.</description>
        <formula>Platform_Content__r.TAM_CY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TAM_LY__c</fullName>
        <description>Hari 7/Aug/17 Created for Account Plan</description>
        <formula>Platform_Content__r.TAM_LY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TAM_NY__c</fullName>
        <description>Hari 7/Aug/17 Created for Account Plan.</description>
        <formula>Platform_Content__r.TAM_NY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM NY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_TAM__c</fullName>
        <formula>Platform_Content__r.TAM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TAM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ACP_Trending__c</fullName>
        <label>Trending</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform_Content__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform Content</label>
        <referenceTo>Platform_Content__c</referenceTo>
        <relationshipLabel>Application Breakdowns</relationshipLabel>
        <relationshipName>Application_Breakdowns</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Breakdown</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>Application Breakdown Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Breakdowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>